<resources>
    <string name="app_name">SWE-project-main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="don_t_have_an_account_signup">Don\'t Have An Account? SignUp</string>
    <string name="or">OR</string>
    <string name="signin_with">SignIn With</string>
    <string name="email">Email</string>
    <string name="find_homemade_food_around_you_or_offer_your_own">Find homemade food around you or offer your own !</string>
    <string name="connect_as_chef">Connect As Chef</string>
    <string name="connect_as_customer">Connect As Customer</string>
    <string name="connect_as_delivery_person">Connect As Delivery Person</string>
    <string name="phone">Phone</string>
    <string name="signin_with_d">SignIn With</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create">Don\'t Have An Account? Create</string>
    <string name="or_d">OR</string>
    <string name="phone_r">Phone</string>
    <string name="firstname">FirstName</string>
    <string name="email_r">Email</string>
    <string name="signin_with_r">SignIn with</string>
    <string name="or_r">OR</string>
    <string name="register">Register</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="area">Area</string>
    <string name="house_streert_no">House/Streert no</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_r">Password</string>
    <string name="email_id_cr">Email id</string>
    <string name="lastname">LastName</string>
    <string name="email_cr">Email</string>
    <string name="phone_cr">Phone</string>
    <string name="signin_with_cr">SignIn with</string>
    <string name="phone_rp">Phone</string>
    <string name="email_r_p">Email</string>
    <string name="signin_with_rp">SignIn with</string>
    <string name="or_rp">OR</string>
    <string name="firstname_rp">FirstName</string>
    <string name="lastname_rp">LastName</string>
    <string name="email_id_rp">Email id</string>
    <string name="password_rp">Password</string>
    <string name="confirm_password_rp">Confirm Password</string>
    <string name="mobilenumber_rp">MobileNumber</string>
    <string name="local_address_rp">Local Address</string>
    <string name="area_rp">Area</string>
    <string name="pin_code_rp">Pin Code</string>
    <string name="state_rp">State</string>
    <string name="city_rp">City</string>
    <string name="register_rp">Register</string>
    <string name="firstname_dr">FirstName</string>
    <string name="lastname_dr">LastName</string>
    <string name="email_id_dr">Email id</string>
    <string name="password_dr">Password</string>
    <string name="confirm_password_dr">Confirm Password</string>
    <string name="mobilenumber_dr">MobileNumber</string>
    <string name="house_streert_no_dr">House/Streert no</string>
    <string name="area_dr">Area</string>
    <string name="pin_code_dr">Pin Code</string>
    <string name="state_dr">State</string>
    <string name="register_dr">Register</string>
    <string name="or_dr">OR_dr</string>
    <string name="email_dr">Email</string>
    <string name="phone_dr">Phone</string>
    <string name="signin_with_dr">SignIn with</string>
    <string name="email_id_cl">Email id</string>
    <string name="forgot_password_cl">Forgot Password?</string>
    <string name="password_cl">Password</string>
    <string name="login_cl">Login</string>
    <string name="account">Don\'t Have An Account? Create</string>
    <string name="or_cl">OR</string>
    <string name="phone_cl">Phone</string>
    <string name="signin_with_cl">SignIn With</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="phone_l">Phone</string>
    <string name="signin_with_l">SignIn With</string>
    <string name="or_l">OR</string>
    <string name="acc">Don\'t Have An Account? Create</string>
    <string name="login_l">Login</string>
    <string name="forgot_password_l">Forgot Password?</string>
    <string name="password_l">Password</string>
    <string name="email_id_l">Email id</string>
    <string name="email_lp">Email</string>
    <string name="verify_phone_number_dlp">Verify Phone Number</string>
    <string name="phone_number_dlp">Phone Number</string>
    <string name="send_otp_dlp">Send OTP</string>
    <string name="acc_dlp">Don\'t Have An Account? SignUp</string>
    <string name="or_dlp">OR</string>
    <string name="signin_with_dlp">SignIn With</string>
    <string name="email_dlp">Email</string>

    <string-array name="State">
        <item>Dhaka</item>
        <item>Chattogram</item>
        <item>Rajshahi</item>
        <item>Barishal</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <item>Mymensingh</item>

    </string-array>

    <string-array name="City">
        <item>Dhaka</item>
        <item>Chattogram</item>
        <item>Rajshahi</item>
        <item>Barishal</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <item>Mymensingh</item>
    </string-array>

    <string-array name="shipper">
        <item>Shipper 1</item>
        <item>Shipper 2</item>
    </string-array>

    <string-array name="DishName">
        <item>Thepla</item>
        <item>Dal Rice</item>
        <item>Dhokla</item>
        <item>Sabji Roti</item>
        <item>Kadhi Khichdi</item>
        <item>Puri bhaji</item>
        <item>Dal Dhokdi</item>
        <item>Undhiyu</item>
        <item>Aloo Paratha</item>
        <item>Patra</item>
        <item>Khandvi</item>
        <item>Gulab Jamun</item>
        <item>SevTomato bhakri</item>
        <item>Shrikhand</item>
        <item>Palak Paneer</item>
        <item>Khulcha</item>
        <item>Makki di roti</item>
        <item>Gobi Partha</item>
        <item>Biryani</item>
        <item>Rajma</item>
        <item>Bhindi Fry</item>
        <item>Dum Biryani</item>
        <item>Rumali roti</item>
        <item>Dal Makhni</item>
        <item>Samosa</item>
        <item>Kachori</item>
        <item>Menduwada</item>
        <item>Pulav</item>
        <item>Pav Bhaji</item>
        <item>Misal Pav</item>
        <item>Mix Vegetable</item>
        <item>Muffins</item>
        <item>DalFry JerraRice</item>
        <item>Bengali sweet</item>
        <item>Puranpoli</item>
        <item>Egg Curry</item>
        <item>Pomfret Fish</item>
        <item>Egg Bhurji</item>
        <item>Dum chicken</item>
        <item>Hyderabadi Chicken Biryni</item>
    </string-array>

</resources>