<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_img"
    tools:context=".Chefloginphone">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:id="@+id/linearlayout"
        android:background="@drawable/background_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_phone_number"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#090909"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/CountryCode"/>

            <EditText
                android:id="@+id/number"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:autofillHints="" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/acsignup"
            android:layout_marginTop="13dp"
            android:text="@string/don_t_have_an_account_signup"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TableRow
                android:id="@+id/hr"
                android:layout_width="107dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/Black"/>
            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:id="@+id/OR"
                android:layout_gravity="center"
                android:text="@string/or"
                android:textColor="@color/Black"
                android:layout_marginTop="6dp"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <TableRow
                android:id="@+id/dr"
                android:layout_width="107dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/Black"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signphone"
            android:layout_marginTop="20dp"
            android:text="@string/signin_with"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="18sp"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEmail"
            android:background="@drawable/btnred"
            android:text="@string/email"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/whitemail"
            android:padding="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>